--- a/nd035-c1-spring-boot-basics-project-starter-master/starter/cloudstorage/src/main/resources/templates/home.html
+++ b/nd035-c1-spring-boot-basics-project-starter-master/starter/cloudstorage/src/main/resources/templates/home.html
@@ -12,7 +12,7 @@
         <div class="container">
             <div id="logoutDiv">
                 <form action="#" th:action="@{/logout}" method="POST">
-                    <button type="submit" class="btn btn-secondary float-right">Logout</button>
+                    <button type="submit" class="btn btn-secondary float-right" id="logout-button">Logout</button>
                 </form>
             </div>
             <div id="contentDiv" style="clear: right;">
@@ -61,7 +61,7 @@
                         </div>
                     </div>
                     <div class="tab-pane fade" id="nav-notes" role="tabpanel" aria-labelledby="nav-notes-tab">
-                        <button style="margin: 0.25em;" type="button" class="btn btn-info float-right" onclick="showNoteModal()">
+                        <button style="margin: 0.25em;" type="button" class="btn btn-info float-right" id="add-new-note" onclick="showNoteModal()">
                             + Add a New Note
                         </button>
 
@@ -77,10 +77,10 @@
                                 <tbody>
                                     <tr th:each="note : ${notes}">
                                         <td>
-                                            <button type="button" class="btn btn-success" th:onclick="javascript:showNoteModal([[${note}]])">Edit</button>
-                                            <a class="btn btn-danger" th:href="@{/home/notes/delete(id=${note.noteid})}">Delete</a>
+                                            <button id="edit-note-button" type="button" class="btn btn-success" th:onclick="javascript:showNoteModal([[${note}]])">Edit</button>
+                                            <a id="delete-note-button" class="btn btn-danger" th:href="@{/home/notes/delete(id=${note.noteid})}">Delete</a>
                                         </td>
-                                        <th scope="row" th:text="${note.notetitle}"></th>
+                                        <td id="th-note-title" th:text="${note.notetitle}"></td>
                                         <td th:text="${note.notedescription}"></td>
                                     </tr>
                                 </tbody>
@@ -112,14 +112,14 @@
                                     </div>
                                     <div class="modal-footer">
                                         <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-                                        <button type="button" class="btn btn-primary" onclick="$('#noteSubmit').click();">Save changes</button>
+                                        <button id="save-note" type="button" class="btn btn-primary" onclick="$('#noteSubmit').click();">Save changes</button>
                                     </div>
                                 </div>
                             </div>
                         </div>
                     </div>
                     <div class="tab-pane fade" id="nav-credentials" role="tabpanel" aria-labelledby="nav-credentials-tab">
-                        <button style="margin: 0.25em;" type="button" class="btn btn-info float-right" onclick="showCredentialModal()">
+                        <button id="add-new-credential" style="margin: 0.25em;" type="button" class="btn btn-info float-right" onclick="showCredentialModal()">
                             + Add a New Credential
                         </button>
 
@@ -136,11 +136,11 @@
                                 <tbody>
                                 <tr th:each="credential : ${credentials}">
                                     <td>
-                                        <button type="button" class="btn btn-success" th:onclick="javascript:showCredentialModal([[${credential}]])">Edit</button>
-                                        <a class="btn btn-danger" th:href="@{/home/credential/delete(id=${credential.credentialid})}">Delete</a>
+                                        <button id="edit-credential-button" type="button" class="btn btn-success" th:onclick="javascript:showCredentialModal([[${credential}]])">Edit</button>
+                                        <a id="delete-credential-button" class="btn btn-danger" th:href="@{/home/credential/delete(id=${credential.credentialid})}">Delete</a>
                                     </td>
                                     <th scope="row" th:text="${credential.url}"></th>
-                                    <td th:text="${credential.username}"></td>
+                                    <td id="th-credential-username" th:text="${credential.username}"></td>
                                     <td th:text="${credential.password}"></td>
                                 </tr>
                                 </tbody>
@@ -176,7 +176,7 @@
                                     </div>
                                     <div class="modal-footer">
                                         <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-                                        <button type="button" class="btn btn-primary" onclick="$('#credentialSubmit').click();">Save changes</button>
+                                        <button id="save-credential" type="button" class="btn btn-primary" onclick="$('#credentialSubmit').click();">Save changes</button>
                                     </div>
                                 </div>
                             </div>
